Slight simplification of stretch computations
This avoids a bunch of divisions while simplifying the code a little
bit. Also added comments on the next step as it seems curve splitting
will not be necessary after all (!!).

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ POM_DEVELOPER_ID=romainguy
 POM_DEVELOPER_NAME=Romain Guy
 POM_DEVELOPER_URL=https://github.com/romainguy
 
-POM_NAME=V9
+POM_NAME=v9
 POM_ARTIFACT_ID=v9
 POM_PACKAGING=aar
 
