Add tests, publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 GROUP=dev.romainguy
 VERSION_NAME=0.1.0
 
+SONATYPE_HOST=S01
+
 POM_DESCRIPTION=Vector 9-patches for Android
 
 POM_URL=https://github.com/romainguy/v9
