Sign on release

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ GROUP=dev.romainguy
 VERSION_NAME=0.1.0
 
 SONATYPE_HOST=S01
+RELEASE_SIGNING_ENABLED=true
 
 POM_DESCRIPTION=Vector 9-patches for Android
 
