Update all dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,9 @@ POM_NAME=v9
 POM_ARTIFACT_ID=v9
 POM_PACKAGING=aar
 
-android.useAndroidX=true
-
 org.gradle.jvmargs=-Xmx512M
+
+android.useAndroidX=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
