--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-rc01'
-        compose_compiler_version = '1.3.2'
-        pathway_version = '0.7.0'
+        compose_version = '1.4.2'
+        compose_compiler_version = '1.4.6'
+        pathway_version = '0.10.0'
     }
     repositories {
         google()
@@ -10,9 +10,9 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.21.0'
-        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.6.0'
+        classpath 'com.android.tools.build:gradle:8.0.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20'
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.24.0'
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.8.10'
     }
 }
