--- a/v9/build.gradle
+++ b/v9/build.gradle
@@ -8,7 +8,7 @@ group = GROUP
 version = VERSION_NAME
 
 android {
-    compileSdk 33
+    compileSdkPreview 'UpsideDownCake'
 
     defaultConfig {
         minSdk 21
@@ -29,10 +29,10 @@ android {
 }
 
 dependencies {
-    androidTestImplementation 'androidx.core:core-ktx:1.9.0'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.core:core-ktx:1.10.0'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
     implementation "dev.romainguy:pathway:$pathway_version"
 }
