Use the proper API level

--- a/v9-demo/build.gradle
+++ b/v9-demo/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdkPreview 'UpsideDownCake'
 
     defaultConfig {
         applicationId "dev.romainguy.graphics.v9.demo"
