--- a/v9/build.gradle
+++ b/v9/build.gradle
@@ -8,11 +8,11 @@ group = GROUP
 version = VERSION_NAME
 
 android {
-    compileSdkPreview 'UpsideDownCake'
+    compileSdk 34
 
     defaultConfig {
         minSdk 21
-        targetSdk 33
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
