--- a/v9/build.gradle
+++ b/v9/build.gradle
@@ -12,7 +12,8 @@ android {
 
     defaultConfig {
         minSdk 21
-        targetSdk 33
+        compileSdk 34
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -29,7 +30,7 @@ android {
 }
 
 dependencies {
-    androidTestImplementation 'androidx.core:core-ktx:1.10.0'
+    androidTestImplementation 'androidx.core:core-ktx:1.12.0'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
